2010-01-26  Vlatko Kosturjak <kost@linux.hr>

	* openvas-nvt-sync.in: quick merge of old script which had support
	for OpenVAS administrator and new script. In short, best of both
	worlds (scripts). 

2010-01-26  Vlatko Kosturjak <kost@linux.hr>

	* openvas-nvt-sync.in: completely new version of openvas-nvt-sync,
	it passed quite a while on mailing list and nobody reported
	any serious bug (except cosmetic changes which can be contributed
	now to SVN).

2010-01-22  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	Added code for a very basic standalone synscanner based on the cnvt to
	ease debugging (e.g. IPv6 might not yet work).

	* cnvts/synscan/synscan.c: Remove undef of DEBUG macro.
	[DEBUG] (openbpf): Be very verbose.
	(scan): Instead of accessing values in arglists, accept these values as
	parameters, slighty more verbose ifdef DEBUG.
	(plugin_run): Find and pass new parameters for scan().
	[STANDALONE] (main): New. Main for the standalone synscanner.

2010-01-22  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* cnvts/synscan/synscan.c: More cosmetics and debug output (conditional
	on DEBUG macro).

2010-01-22  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* cnvts/openvas_tcp_scanner/openvas_tcp_scanner.c, openvassd/hosts.c:
	Flush trailing white
	spaces, minor other cosmetic changes.

	* openvassd/attack.c, openvassd/attack.h: Cosmetics, docs.

2010-01-22  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* cnvts/synscan/synscan.c (rawsocket): Fixed typos in
	error strings.

2010-01-22  Matthew Mundell <matthew.mundell@intevation.de>

	* openvassd/users.c [DEBUG_RULES]: Print with log_write.
	(users_add_rule): Set the rule family.

	* openvassd/rules.c [DEBUG_RULES]: Print with log_write.
	(rules_dump): Add ip4 or ip6 on front of line.

	* openvassd/openvassd.c (scanner_thread) [DEBUG_RULES]: Print with
	log_write.

2010-01-21  Matthew Mundell <matthew.mundell@intevation.de>
